[tool.poetry]
name = "hudhud"
version = "2.0.0"
description = "Hudhud multi-module project"
authors = ["dextmorgn <contact@hudhud.io>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
hudhud-core = { path = "./hudhud-core", develop = true }
hudhud-types = { path = "./hudhud-types", develop = true }
hudhud-enrichers = { path = "./hudhud-enrichers", develop = true }
hudhud-api = { path = "./hudhud-api", develop = true }
pydantic = {extras = ["email"], version = "^2.11.7"}
python-multipart = "^0.0.20"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
