[tool.poetry]
name = "hudhud-types"
version = "0.1.0"
description = "Pydantic models for hudhud"
authors = ["dextmorgn <contact@hudhud.io>"]
packages = [{ include = "hudhud_types" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
